# ckanext-datapackage-creator

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  app.py  ckan.ini  ckan_source_code_instalation.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
ckanext/datapackage_creator/: backends.py  cli.py  converter.py  decorators.py  inference.py  logic.py  model.py  plugin.py  settings.py  utils.py  validation.py
ckanext/datapackage_creator/controllers/: datapackage_creator.py
ckanext/datapackage_creator/i18n/pt_BR/LC_MESSAGES/: ckanext-datapackage-creator.po
ckanext/datapackage_creator/migration/datapackage_creator/: alembic.ini
ckanext/datapackage_creator/migration/datapackage_creator/versions/: 932d2ef4d60b_create_tables.py  a799331861f1_create_tables.py  daa77d8d1893_.py
ckanext/datapackage_creator/public/datapackage_creator/css/: main.css  styles.css
ckanext/datapackage_creator/public/datapackage_creator/js/: form.js  package_form.js  package_read.js  resource_form.js  resource_read.js  validation.js
ckanext/datapackage_creator/templates/datapackage_creator/: entity_diagram.html  form.html  validation_read.html
ckanext/datapackage_creator/templates/package/: new_resource.html  new_resource_not_draft.html  read.html  read_base.html  resource_edit.html  resource_read.html
ckanext/datapackage_creator/templates/package/snippets/: additional_info.html  package_form.html  resource_item.html  resources_list.html  (+2 more)
ckanext/datapackage_creator/tests/controllers/: test_data.csv  test_datapackage_creator.py
docs/: example_configuration.json
