[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-datapackage-creator"
version = "0.0.5"
authors = [
  { name="Transparência Minas Gerais" }
]
description = "Data Package Creator."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
keywords=["CKAN"]

[project.urls]
"Homepage" = "https://github.com/transparencia-mg/ckanext-datapackage-creator"
